--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -1,5 +1,5 @@
 .sidebar {
     background-color: $color-primary;
-    grid-column: sidebar-start/sidebar-end;
+    grid-column: sidebar;
     grid-row: 1/-1;
 }
