--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,11 @@ html {
   box-sizing: border-box;
   font-size: 62.5%;
 }
+@media only screen and (max-width: 75em) {
+  html {
+    font-size: 50%;
+  }
+}
 
 body {
   font-family: "Nunito", sans-serif;
@@ -23,10 +28,27 @@ body {
   grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
   grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
 }
+@media only screen and (max-width: 62.5em) {
+  .container {
+    grid-template-rows: 6rem 80vh min-content 40vw repeat(3, min-content);
+    grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
+  }
+}
+@media only screen and (max-width: 50em) {
+  .container {
+    grid-template-rows: 6rem calc(100vh - 6rem);
+  }
+}
 
 .heading-4, .heading-3, .heading-2, .heading-1 {
   font-family: "Josefin Sans", sans-serif;
   font-weight: 400;
+}
+
+.heading-1 {
+  font-size: 4.5rem;
+  color: #f9f7f6;
+  line-height: 1;
 }
 
 .heading-2 {
@@ -93,16 +115,159 @@ body {
   background-color: #c69963;
   grid-column: sidebar;
   grid-row: 1/-1;
+  display: flex;
+  justify-content: center;
+}
+@media only screen and (max-width: 62.5em) {
+  .sidebar {
+    grid-column: 1/-1;
+    grid-row: 1/2;
+    justify-content: flex-end;
+    align-items: center;
+  }
+}
+.sidebar__nav-btn {
+  border: none;
+  border-radius: 0;
+  background-color: #fff;
+  height: 2px;
+  width: 4.5rem;
+  margin-top: 4rem;
+  cursor: pointer;
+}
+.sidebar__nav-btn::before, .sidebar__nav-btn::after {
+  background-color: #fff;
+  height: 2px;
+  width: 4.5rem;
+  content: "";
+  display: block;
+}
+.sidebar__nav-btn::before {
+  transform: translateY(-1.5rem);
+}
+.sidebar__nav-btn::after {
+  transform: translateY(1.3rem);
+}
+@media only screen and (max-width: 62.5em) {
+  .sidebar__nav-btn {
+    margin-top: 0;
+    margin-right: 3rem;
+    transition: 0.3s;
+  }
+}
+.sidebar__nav-btn::before {
+  transform: translateY(-1.2rem);
+}
+.sidebar__nav-btn::after {
+  transform: translateY(1rem);
 }
 
 .header {
   background-color: #54483A;
   grid-column: full-start/col-end 6;
+  background-image: linear-gradient(rgba(16, 29, 44, 0.93), rgba(16, 29, 44, 0.93)), url("/img/hero.jpeg");
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  display: grid;
+  grid-template-rows: 1fr min-content minmax(6rem, min-content) 1fr;
+  grid-template-columns: mina-max(min-content, max-content);
+  justify-content: center;
+  grid-row-gap: 1.5rem;
+  padding: 8rem;
+  padding-top: 4rem;
+}
+@media only screen and (max-width: 50em) {
+  .header {
+    grid-column: full;
+  }
+}
+@media only screen and (max-width: 37.5em) {
+  .header {
+    padding: 5rem;
+  }
+}
+.header__logo {
+  height: 3rem;
+  justify-self: center;
+}
+.header__seenon-text {
+  display: grid;
+  grid-template-columns: 1fr max-content 1fr;
+  grid-column-gap: 1.5rem;
+  align-items: center;
+  font-size: 1.6rem;
+  color: #aaa;
+}
+.header__seenon-text::before, .header__seenon-text::after {
+  content: "";
+  height: 1px;
+  display: block;
+  background-color: currentColor;
+}
+.header__seenon-logos {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-column-gap: 3rem;
+  justify-items: center;
+  align-items: center;
+}
+.header__seenon-logos img {
+  max-height: 2.5rem;
+  max-width: 100%;
+  filter: brightness(70%);
+}
+.header .btn {
+  align-self: start;
+  justify-self: start;
 }
 
 .realtors {
   background-color: #101d2c;
   grid-column: col-start 7/full-end;
+  padding: 3rem;
+  display: grid;
+  align-content: center;
+  justify-content: center;
+  justify-items: center;
+  grid-row-gap: 2rem;
+}
+@media only screen and (max-width: 50em) {
+  .realtors {
+    grid-column: full;
+  }
+}
+.realtors__list {
+  display: grid;
+  grid-template-columns: min-content max-content;
+  grid-column-gap: 2rem;
+  grid-row-gap: 5vh;
+  grid-template-rows: repeat(3, 1fr);
+  align-items: center;
+}
+@media only screen and (max-width: 50em) {
+  .realtors__list {
+    display: flex;
+    justify-content: space-between;
+    padding: 2rem;
+  }
+}
+@media only screen and (max-width: 37.5em) {
+  .realtors__list {
+    display: grid;
+    grid-template-columns: min-content max-content;
+  }
+}
+.realtors__img {
+  width: 7rem;
+  border-radius: 50%;
+  display: block;
+}
+.realtors__sold {
+  text-transform: uppercase;
+  color: #aaa;
+  margin-top: -3px;
 }
 
 .features {
@@ -135,16 +300,31 @@ body {
   background-color: #c69963;
   grid-column: full-start/col-end 4;
   background-image: linear-gradient(rgba(198, 153, 99, 0.5), rgba(198, 153, 99, 0.5)), url(../img/back.jpg);
+  background-size: cover;
   display: grid;
   grid-template-rows: repeat(6, 1fr);
   grid-template-columns: repeat(6, 1fr);
   align-items: center;
+}
+@media only screen and (max-width: 50em) {
+  .story__pictures {
+    grid-column: 1/-1;
+    padding: 6rem;
+  }
 }
 .story__img--1 {
   width: 100%;
   grid-column: 2/6;
   grid-row: 2/6;
   box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.1);
+}
+@media only screen and (max-width: 50em) {
+  .story__img--1 {
+    grid-column: 1/5;
+    grid-row: 1/-1;
+    height: 100%;
+    width: 100%;
+  }
 }
 .story__img--2 {
   width: 115%;
@@ -153,6 +333,12 @@ body {
   z-index: 10;
   box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.4);
 }
+@media only screen and (max-width: 50em) {
+  .story__img--2 {
+    width: 100%;
+    grid-row: 1/-1;
+  }
+}
 .story__content {
   display: grid;
   align-content: center;
@@ -160,6 +346,12 @@ body {
   background-color: #f9f7f6;
   grid-column: col-start 5/full-end;
   padding: 6rem 8vw;
+}
+@media only screen and (max-width: 50em) {
+  .story__content {
+    grid-column: 1/-1;
+    grid-row: 5/6;
+  }
 }
 .story__text {
   font-size: 1.5rem;
@@ -176,34 +368,169 @@ body {
 }
 .homes .home {
   background-color: #f9f7f6;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-row-gap: 3.5rem;
+  justify-self: center;
 }
 .homes .home__img {
   width: 100%;
+  grid-column: 1/-1;
+  grid-row: 1/2;
+  z-index: 1;
 }
 .homes .home__like {
   width: 2rem;
+  height: 2rem;
+  fill: #c69963;
+  grid-row: 1/2;
+  grid-column: 2/3;
+  z-index: 2;
+  justify-self: end;
+  margin: 1rem;
 }
 .homes .home__name {
-  width: 2rem;
+  grid-row: 1/2;
+  background-color: #101d2c;
+  font-family: "Josefin Sans", sans-serif;
+  color: white;
+  font-size: 1.6rem;
+  padding: 1.25rem;
+  text-align: center;
+  justify-items: center;
+  grid-column: 1/-1;
+  font-weight: 400;
+  width: 80%;
+  justify-self: center;
+  z-index: 3;
+  align-self: end;
+  transform: translateY(50%);
 }
-.homes .home__location {
-  width: 2rem;
+.homes .home__location, .homes .home__rooms {
+  margin-top: 2.5rem;
 }
-.homes .home__rooms {
-  width: 2rem;
+.homes .home__location, .homes .home__rooms, .homes .home__area, .homes .home__price {
+  font-size: 1.5rem;
+  margin-left: 2rem;
+  display: flex;
+  align-items: center;
+  gap: 2rem;
 }
-.homes .home__area {
+.homes .home__location svg, .homes .home__rooms svg, .homes .home__area svg, .homes .home__price svg {
   width: 2rem;
+  height: 2rem;
+  fill: #c69963;
+}
+.homes .home__btn {
+  grid-column: 1/-1;
 }
 
 .gallery {
-  background-color: #54483A;
   grid-column: full;
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(7, 5vw);
+  grid-gap: 1.5rem;
+  padding: 1.5rem;
+}
+.gallery__item--1 {
+  grid-row: 1/3;
+  grid-column: 1/3;
+}
+.gallery__item--2 {
+  grid-row: 1/4;
+  grid-column: 3/6;
+}
+.gallery__item--3 {
+  grid-row: 1/3;
+  grid-column: 6/7;
+}
+.gallery__item--4 {
+  grid-row: 1/3;
+  grid-column: 7/-1;
+}
+.gallery__item--5 {
+  grid-row: 3/6;
+  grid-column: 1/3;
+}
+.gallery__item--6 {
+  grid-row: 4/6;
+  grid-column: 3/5;
+}
+.gallery__item--7 {
+  grid-row: 4/5;
+  grid-column: 5/6;
+}
+.gallery__item--8 {
+  grid-row: 3/5;
+  grid-column: 6/8;
+}
+.gallery__item--9 {
+  grid-row: 3/6;
+  grid-column: 8/-1;
+}
+.gallery__item--10 {
+  grid-row: 6/-1;
+  grid-column: 1/2;
+}
+.gallery__item--11 {
+  grid-row: 6/-1;
+  grid-column: 2/4;
+}
+.gallery__item--12 {
+  grid-row: 6/-1;
+  grid-column: 4/5;
+}
+.gallery__item--13 {
+  grid-row: 5/-1;
+  grid-column: 5/8;
+}
+.gallery__item--14 {
+  grid-row: 6/-1;
+  grid-column: 8/-1;
+}
+.gallery__img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
 }
 
 .footer {
   background-color: #101d2c;
   grid-column: full;
+  padding: 8rem;
+}
+.footer .nav {
+  display: grid;
+  list-style: none;
+  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+  grid-gap: 2rem;
+  align-items: center;
+}
+.footer .nav__link:link, .footer .nav__link:visited {
+  font-size: 1.4rem;
+  color: #fff;
+  text-decoration: none;
+  font-family: "Josefin Sans", sans-serif;
+  text-transform: uppercase;
+  text-align: center;
+  padding: 1.5rem;
+  display: block;
+  transition: all 0.2s;
+}
+.footer .nav__link:hover, .footer .nav__link:active {
+  background-color: rgba(255, 255, 255, 0.05);
+  transform: translateY(-3px);
+}
+.footer .copyright {
+  color: #aaa;
+  font-size: 1.4rem;
+  margin-top: 6rem;
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
+  width: 70%;
 }
 
 /*# sourceMappingURL=style.css.map */
