--- a/sass/_homes.scss
+++ b/sass/_homes.scss
@@ -9,29 +9,75 @@
 
     .home {
         background-color: $color-grey-light-1;
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        grid-row-gap: 3.5rem ;
+        justify-self: center;
 
         &__img {
             width: 100%;
+            grid-column: 1/-1;
+            grid-row: 1/2;
+            z-index: 1;
         }
 
         &__like{
-            width: 2rem
+            width: 2rem;
+            height: 2rem;
+            fill: $color-primary;
+            grid-row: 1/2;
+            grid-column: 2/3;
+            z-index: 2;
+            justify-self: end;
+            margin: 1rem
         }
         
         &__name {
-            width: 2rem
+            grid-row: 1/2;
+            background-color: $color-secondary;
+            font-family: $font-display;
+            color: white;
+            font-size: 1.6rem;
+            padding: 1.25rem ;
+            text-align: center;
+            justify-items: center;
+            grid-column: 1/-1;
+            font-weight: 400;
+            width: 80%;
+            justify-self: center;
+            z-index: 3 ;
+            align-self: end;
+            transform: translateY(50%);
         }
 
-        &__location {
-            width: 2rem
-        }
-
+        &__location,
         &__rooms {
-            width: 2rem
+            margin-top: 2.5rem;
         }
 
-        &__area {
-            width: 2rem
+        &__location,
+        &__rooms,
+        &__area,
+        &__price {
+            font-size: 1.5rem;
+            margin-left: 2rem;
+            display: flex;
+            align-items: center;
+            gap: 2rem;
+
+            svg{
+                width:2rem;
+                height: 2rem;
+                fill: $color-primary;
+            }
+            p {
+
+            }
+        }
+        &__btn {
+            grid-column: 1/-1;
         }
     }
+    
+      
 }
