--- a/sass/_realtors.scss
+++ b/sass/_realtors.scss
@@ -1,4 +1,52 @@
 .realtors {
     background-color: $color-secondary;
     grid-column: col-start 7/full-end;
+    padding: 3rem;
+    display: grid;
+    align-content: center;
+    justify-content: center;
+    justify-items: center;  
+    grid-row-gap: 2rem;
+
+    @media only screen and (max-width: $bp-medium){ 
+        grid-column: full;;
+      
+    }
+
+    &__list {
+        display: grid;
+        grid-template-columns: min-content max-content;
+        grid-column-gap: 2rem;
+        grid-row-gap: 5vh;
+        grid-template-rows: repeat(3,1fr);
+        align-items: center;
+        @media only screen and (max-width: $bp-medium){ 
+            display: flex;
+            justify-content: space-between;
+            padding: 2rem;
+        }
+
+        @media only screen and (max-width: $bp-small){ 
+            display: grid;
+            grid-template-columns: min-content max-content;
+        }
+
+    }
+
+    &__img {
+        width: 7rem;
+        border-radius: 50%;
+        display: block;
+
+    }
+
+    &__details {
+        
+    }
+
+    &__sold {
+        text-transform: uppercase;
+        color: $color-grey-light-2;
+        margin-top: -3px;
+    }
 }
