--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -3,12 +3,16 @@
         background-color: $color-primary;
         grid-column: full-start / col-end 4;
         background-image: linear-gradient(rgba($color-primary, .5),rgba($color-primary, .5)), url(../img/back.jpg) ;
-
+        background-size: cover;
         display: grid;
         grid-template-rows: repeat(6,1fr);
         grid-template-columns: repeat(6,1fr);
         align-items: center;
 
+        @media only screen and (max-width: $bp-medium){ 
+            grid-column: 1/-1;
+            padding: 6rem;
+        }
     }
 
     &__img--1 {
@@ -16,6 +20,13 @@
         grid-column: 2/6;
         grid-row: 2/6;
         box-shadow: 0 2rem 5rem rgba(#000, .1);
+
+        @media only screen and (max-width: $bp-medium){ 
+          grid-column: 1/5;
+          grid-row: 1/-1;
+          height: 100%;
+          width: 100%;
+        }
 
     }
 
@@ -25,7 +36,10 @@
         grid-row: 4/6;
         z-index: 10;
         box-shadow: 0 2rem 5rem rgba(#000, .4);
-
+        @media only screen and (max-width: $bp-medium){ 
+            width: 100%;
+            grid-row: 1/-1;
+          }
     }
 
     &__content {
@@ -40,6 +54,10 @@
         background-color: $color-grey-light-1;
         grid-column: col-start 5/ full-end ;
         padding: 6rem 8vw;
+        @media only screen and (max-width: $bp-medium){ 
+            grid-column: 1/-1;
+            grid-row: 5/6 ;
+        }
     }
 
     &__text {
